--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -14,3 +14,31 @@
 .wy-table-responsive {
     overflow: visible !important;
 }
+
+
+.wrapper {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 40px;
+}
+
+.description {
+  width: 95%;
+  text-overflow: clip;
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  height: 40px;
+}
+
+.btn {
+  /* margin: 0; padding: 0 0 0 -30px; */
+  background-color: transparent; border-width: 0; outline-width: 0;
+  font-size: 20px; color: #2f58df;
+  position: absolute;
+  /* bottom: 15px; */
+  right: 5%;
+  cursor: pointer;
+}
